# algorithm

./: .appveyor.yml  .gitignore  .travis.yml  .travis.yml-OLD  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  appveyor.yml_OLD  build.py  conanfile.py  index.html  params.json
.github/: matrix.json
.github/workflows/: matrix.json  tao.yml
OLD_benchmark - Copy (2)/: CMakeLists.txt  bench_test_1.cpp  measure.in.rb
OLD_benchmark - Copy (2)/bench_test_1/: execute.hana.tuple.homogeneous.erb.cpp
benchmark/: CMakeLists.txt  _OLD_CMakeLists.txt  bench_test_1.cpp  bench_test_2.cpp  bench_test_3.cpp  inst_median_of_3.cpp  inst_median_of_5.cpp  inst_median_of_7.cpp  instrumented.cpp  instrumented.hpp  launch_bench.py  measure.in.rb  measurements.hpp  mult_total.OLD_cpp_OLD  mult_total.cpp  test_sort.cpp  timer.hpp  type_description.hpp
benchmark/bench_test_1/: execute.hana.tuple.homogeneous.erb.cpp
benchmarks/release/Linux-x86_64/clang-3.6.2/: bench.bench_test_1  bench.bench_test_3
benchmarks/release/linux-x86_64/clang-3.6.2/: bench.bench_test_1  bench.bench_test_2  bench.bench_test_3
ci_utils/: __init__.py  set_envvars_and_files.py  utils.py
data/: data.json  testchart.csv  testchart_interval.csv
docs/: README.md  index.html  reference.Doxyfile
include/tao/: algorithm.hpp
include/tao/algorithm/: accumulate.hpp  add_to_counter.hpp  adjacent_swap.hpp  algorithm.hpp  concepts.hpp  concepts_undef.hpp  copy.hpp  count.hpp  counter_machine.hpp  counter_machine_check.hpp  find.hpp  for_each.hpp  integers.hpp  iota.hpp  iterator.hpp  numerics.hpp  power.hpp  predicates.hpp  primes.hpp  relation.hpp  remove_range.hpp  reverse.hpp  rotate.hpp  rotate_one.hpp  search.hpp  selection.hpp  selection_i_5.hpp  selection_i_7.hpp  selection_stability.hpp  shift.hpp  statistics.hpp  swap.hpp  type_attributes.hpp
include/tao/algorithm/bench/: measurements.hpp
include/tao/algorithm/binary_counter/: add_to_counter.hpp
include/tao/algorithm/partition/: partition.hpp  partition_point.hpp  partition_point_variant.hpp  partitioned.hpp
include/tao/algorithm/selection/: a.out  max_element.hpp  min_element.hpp  min_max_element.hpp  selection.hpp  selection_i_1_3.hpp  selection_i_5.hpp  selection_i_6.hpp  selection_i_7.hpp  selection_stability.hpp  stream_iterator.cpp
include/tao/algorithm/sorting/: TODO_andreis_approach.hpp  TODO_introsort.hpp  TODO_merge_sort.hpp  insertion_sort.hpp  min_max_sort.hpp  selection_sort.hpp
include/tao/algorithm/toys/: palindrome.hpp
include/tao/benchmark/: instrumented.hpp
papers/: how-to-find-papers.md
src/benchmark/: instrumented.cpp
test/: CMakeLists.txt  README.md  primes.cpp  shift_right.cpp  statistics.cpp  test.cpp  tests.cpp
test_old/: CMakeLists.txt  README.md  a.out  catch.hpp  primes.cpp  selection.cpp  shift_right.cpp  statistics.cpp
test_package/: conanfile.py
