# Tao.Algorithm
#
# Copyright Fernando Pelliccioni 2016
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

project(Tao.Algorithm CXX)

cmake_minimum_required(VERSION 2.8)

include_directories(include)
add_subdirectory(benchmark)
add_subdirectory(test)
